starting to set up for openjdk11