@@ -1,16 +1,14 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>BMDExpress2</groupId>
-  <artifactId>BMDExpress2</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  
-   <properties>
-		<!-- Generic properties -->
-		<java.version>1.8</java.version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
-		<!-- Logging -->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.sciome</groupId>
+    <artifactId>bmdexpress2</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        		<!-- Logging -->
 		<logback.version>1.0.13</logback.version>
 		<slf4j.version>1.7.5</slf4j.version>
 
@@ -25,26 +23,46 @@
         
          <!-- Jcommon Version -->
         <jcommon.version>1.0.23</jcommon.version>
-        
-          <!-- Maven Compiler Version -->
-        <mavencompiler.version>3.3</mavencompiler.version>
-     
-        
-        <!-- Java Version -->
-        <java.version>1.8</java.version>
-        
-	</properties>
-	<repositories>
+    </properties>
+    
+    
+    	<repositories>
 		 <repository>
 		      <id>sciome</id>
 		      <name>sciome</name>
 		      <url>https://apps.sciome.com/maven</url>
 	    </repository>
 	</repositories>
+    
+    <dependencies>
+    	<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-swing -->
+	<dependency>
+	    <groupId>org.openjfx</groupId>
+	    <artifactId>javafx-swing</artifactId>
+	    <version>11.0.1</version>
+	</dependency>
 	
-	<dependencies>
-	
-		<dependency>
+		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-web -->
+	<dependency>
+	    <groupId>org.openjfx</groupId>
+	    <artifactId>javafx-web</artifactId>
+	    <version>11.0.1</version>
+	</dependency>
+		
+		
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>11</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>11</version>
+        </dependency>
+        
+        
+        	<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>${slf4j.version}</version>
@@ -109,20 +127,20 @@
 		<dependency>
 		    <groupId>com.fasterxml.jackson.core</groupId>
 		    <artifactId>jackson-core</artifactId>
-		    <version>2.9.7</version>
+		    <version>2.10.3</version>
 		</dependency>
 		
 		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations -->
 		<dependency>
 		    <groupId>com.fasterxml.jackson.core</groupId>
 		    <artifactId>jackson-annotations</artifactId>
-		    <version>2.9.7</version>
+		    <version>2.10.3</version>
 		</dependency>
 		
 		<dependency>
 	        <groupId>com.fasterxml.jackson.core</groupId>
 	        <artifactId>jackson-databind</artifactId>
-	        <version>2.9.7</version>
+	        <version>2.10.3</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
@@ -157,7 +175,7 @@
 		<dependency>
 		    <groupId>org.controlsfx</groupId>
 		    <artifactId>controlsfx</artifactId>
-		    <version>8.40.15</version>
+		    <version>11.0.1</version>
 		</dependency>
 
 		<!-- sciome commons math functions-->
@@ -166,31 +184,49 @@
   			<artifactId>math</artifactId>
  	 		<version>1.04.0128</version>
          </dependency>
-	</dependencies>	
-  
-  
-  <build>
-    <sourceDirectory>src</sourceDirectory>
-    <resources>
-      <resource>
-        <directory>src</directory>
-        <excludes>
-          <exclude>**/*.java</exclude>
-        </excludes>
-      </resource>
-      <resource>
-        <directory>resources</directory>
-      </resource>
-    </resources>
+        
+        
+    </dependencies>
+    
+      <build>
     <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>${mavencompiler.version}</version>
+    <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-maven-plugin -->
+     <plugin>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-maven-plugin</artifactId>
+        <version>0.0.4</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+                                  <source>11</source>
+                                <target>11</target>
+                                <release>11</release>
+                                <compilerArgs>
+
+                                <arg>--add-modules</arg>
+                                <arg> javafx.controls,javafx.fxml,javafx.graphics </arg>
+                                        <arg>--add-exports</arg>
+                                <arg>javafx.controls/com.sun.javafx.scene.control.behavior=org.controlsfx.controls </arg>
+
+                                        <arg>--add-exports</arg>
+                                <arg>javafx.controls/com.sun.javafx.scene.control.inputmap=org.controlsfx.controls </arg>
+
+                                <arg>--add-exports</arg>
+                                <arg>javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls </arg>
+
+                                <arg>--add-exports</arg>
+                                <arg>javafx.base/com.sun.javafx.event=org.controlsfx.controls </arg>
+                                </compilerArgs>
+                    <mainClass>com.sciome.bmdexpress2/com.sciome.bmdexpress2.BMDExpress2Main</mainClass>
         </configuration>
       </plugin>
+
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.8.0</version>
+            <configuration>
+                <release>11</release>
+            </configuration>
+        </plugin >
       <plugin>
       <artifactId>maven-assembly-plugin</artifactId>
       <configuration>
@@ -206,5 +242,10 @@
     </plugin>
     </plugins>
   </build>
+    
+    
   
+    
+    
+    
 </project>
